#==============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for  ALGORITHMS  PROJECT
#==============================================================================

MESSAGE(STATUS "BUILD  ALGORITHMS\n")

SET(PROJECT_FOLDER "algorithms")

ADD_SUBDIRECTORY(arrays)
ADD_SUBDIRECTORY(nums)
ADD_SUBDIRECTORY(permutation)
ADD_SUBDIRECTORY(sort)
ADD_SUBDIRECTORY(strings)
