#==============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for  DATA_STRUCTURES  PROJECT
#==============================================================================

MESSAGE(STATUS "BUILD  DATA_STRUCTURES\n")

ADD_SUBDIRECTORY(binary_tree)
