#==============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for  DATA_STRUCTURES  PROJECT
#==============================================================================

MESSAGE(STATUS "\nBUILD  DATA_STRUCTURES\n")

SET(PROJECT_FOLDER "data_structures")

ADD_SUBDIRECTORY(binary_tree)
