###############################################################################
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
###############################################################################
# Cmake for TESTS PROJECT
###############################################################################

MESSAGE(STATUS "BUILD  EXAMPLE\n")

ADD_SUBDIRECTORY(thread)

