###############################################################################
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
###############################################################################
# Cmake for TESTS PROJECT
###############################################################################

MESSAGE(STATUS "BUILD  EXAMPLE\n")

ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(uuid)
ADD_SUBDIRECTORY(memory_leak)
ADD_SUBDIRECTORY(file_reader)
