#=============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#=============================================================================
# Cmake for EXAMPLE  PROJECT
#=============================================================================

MESSAGE(STATUS "BUILD  EXAMPLE\n")

ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(uuid)
ADD_SUBDIRECTORY(memory_leak)
ADD_SUBDIRECTORY(file_reader)
ADD_SUBDIRECTORY(output_number)
ADD_SUBDIRECTORY(smart_pointers)
ADD_SUBDIRECTORY(sort)
ADD_SUBDIRECTORY(ublas)
