#==============================================================================
# Copyright (c) 2011 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for  EXAMPLE  PROJECT
#==============================================================================

MESSAGE(STATUS "BUILD  EXAMPLE\n")

ADD_SUBDIRECTORY(arrays)
ADD_SUBDIRECTORY(hanoi)
ADD_SUBDIRECTORY(nums)
ADD_SUBDIRECTORY(permutation)
ADD_SUBDIRECTORY(sizeof)
ADD_SUBDIRECTORY(smart_pointers)
ADD_SUBDIRECTORY(sort)
ADD_SUBDIRECTORY(strings)
ADD_SUBDIRECTORY(ublas)
ADD_SUBDIRECTORY(uuid)
