#==============================================================================
# Copyright (c) 2012 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================

MESSAGE(STATUS "BUILD  GLUT\n")

SET(PROJECT_FOLDER "glut")

ADD_SUBDIRECTORY(game_mode)
ADD_SUBDIRECTORY(cursor_mode)

MESSAGE("")
