#==============================================================================
# Copyright (c) 2014 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================

MESSAGE(STATUS "BUILD  IO\n")

SET(PROJECT_FOLDER "io")

ADD_SUBDIRECTORY(read_file)

MESSAGE(STATUS "")
